update openapi, fix issues with codegen
